# tatami_r

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  UnknownMatrix_8hpp.html  UnknownMatrix_8hpp_source.html  annotated.html  classes.html  classtatami__r_1_1UnknownMatrix-members.html  classtatami__r_1_1UnknownMatrix.html  dir_7e5be6e541aa0c458f996c9da6f42c7f.html  dir_96eb8cbdc9ff649c0682093ea9962aa1.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md_parallel.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetatami__r.html  pages.html  parallel.md  parallelize_8hpp.html  parallelize_8hpp_source.html  raticate_8hpp.html  raticate_8hpp_source.html  sparse__matrix_8hpp.html  sparse__matrix_8hpp_source.html  structraticate_1_1Parsed-members.html  structraticate_1_1Parsed.html  structtatami__r_1_1Options-members.html  structtatami__r_1_1Options.html  structtatami__r_1_1UnknownMatrixOptions-members.html  structtatami__r_1_1UnknownMatrixOptions.html  tatami__r_8hpp.html  tatami__r_8hpp_source.html  tatami_r.tag  (+2 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  enums_0.js  enums_1.js  enums_4.js  files_0.js  files_1.js  files_2.js  files_3.js  (+56 more)
include/raticate/: CSparseMatrix.hpp  DelayedAperm.hpp  DelayedMatrix.hpp  DelayedSubset.hpp  SimpleMatrix.hpp  SparseArraySeed.hpp  UnknownMatrix.hpp  parallel.hpp  parallelize.hpp  raticate.hpp  utils.hpp
include/tatami_r/: SimpleMatrix.hpp  UnknownMatrix.hpp  dense_extractor.hpp  dense_matrix.hpp  parallelize.hpp  sparse_extractor.hpp  sparse_matrix.hpp  utils.hpp
tests/: DESCRIPTION  NAMESPACE
tests/R/: RcppExports.R
tests/src/: Makevars  RcppExports.cpp  bindings.cpp
tests/tests/: testthat.R
tests/tests/testthat/: setup.R  test-COO_SparseMatrix.R  test-CSparseMatrix.R  test-DelayedMatrix.R  test-SVT_SparseMatrix.R  test-SimpleMatrix.R  test-SparseArraySeed.R  test-UnknownMatrix.R  test-dense-arbitrary.R  test-dense-regular.R  test-dense-unchunked.R  test-dense.R  test-matrix.R  test-miscellaneous.R  test-sparse-arbitrary.R  test-sparse-regular.R  test-sparse-unchunked.R
